# hare

./: CMakeLists.txt  README.md
FrontEnd/: ResNet50_img_preprocess.py  frontend.py  sqnet_img_preprocess.py
FrontEnd/templates/: index.html
SCI/src/: CMakeLists.txt  defines.h  defines_uniform.h  functionalities_uniform.h  globals.cpp  globals.h  library_fixed.cpp  library_fixed_uniform.cpp  library_fixed_uniform.h  library_fixed_uniform_cheetah.cpp
SCI/src/NonLinear/: CMakeLists.txt  argmax.h  maxpool.h  relu-he.h  relu-he2.h
SCI/src/cheetah/: cheetah-api.cpp  cheetah-api.h
include/gemini/cheetah/: hom_conv2d_ss.cc  hom_conv2d_ss.h  tensor.h
networks/: main_densenet121_seperate.cpp  main_resnet50_seperate.cpp  main_sqnet_seperate.cpp
pretrained/img_preprocess/: ResNet50_img_preprocess.py
scripts/: build.sh  common.sh  run-client.sh  run-server.sh
